test/parser.d/invalid/unless.surc.bad
main() = do
	unless true do
		print "sub call"
	end while
